updated: conjugation-present.tex

--- a/french/french-grammar/conjugation-present.tex
+++ b/french/french-grammar/conjugation-present.tex
@@ -105,7 +105,7 @@ ils/elles  &	\stemPresent-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFut
 \vskip 0.1cm
 \begin{tabular}{|c||L{2.5cm}|L{2.5cm}|L{2.5cm}|L{2.5cm}|}
 \hline
-& Pr\'esent & Imparfait & Conditonnel & Futur \\
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
 \hline
 & \textit{have, am having} & \textit{used to have, was having} & \textit{would have} & \textit{will have} \\
 \hline\hline
@@ -124,7 +124,7 @@ ils/elles   &	ont 	&	avaient	&	auraient	&	auront	\\
 \vskip 0.1cm
 \begin{tabular}{|c||L{2.5cm}|L{2.5cm}|L{2.5cm}|L{2.5cm}|}
 \hline
-& Pass\'e compos\'e & Plus-que-parfait & Conditonnel Pass\'e & Futur ant\'erieur \\
+& Pass\'e compos\'e & Plus-que-parfait & Conditionnel Pass\'e & Futur ant\'erieur \\
 \hline
 & \textit{did, have done} & \textit{had done} & \textit{would have done} & \textit{will have done} \\
 \hline\hline
@@ -146,7 +146,7 @@ ils/elles   &	ont 	&	avaient	&	auraient	&	auront	\\
 \vskip 0.1cm
 \begin{tabular}{|c||L{2.5cm}|L{2.5cm}|L{2.5cm}|L{2.5cm}|}
 \hline
-& Pr\'esent & Imparfait & Conditonnel & Futur \\
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
 \hline
 & \textit{am, am being} & \textit{used to be, was being} & \textit{would be} & \textit{will be} \\
 \hline\hline
@@ -165,7 +165,7 @@ ils/elles   &	sont 	&	\'etaient	&	seraient	&	seront	\\
 \vskip 0.1cm
 \begin{tabular}{|c||L{2.5cm}|L{2.5cm}|L{2.5cm}|L{2.5cm}|}
 \hline
-& Pass\'e compos\'e & Plus-que-parfait & Conditonnel Pass\'e & Futur ant\'erieur \\
+& Pass\'e compos\'e & Plus-que-parfait & Conditionnel Pass\'e & Futur ant\'erieur \\
 \hline
 & \textit{did, have done} & \textit{had done} & \textit{would have done} & \textit{will have done} \\
 \hline\hline
