updated: conjugation-present.tex

--- a/french/french-grammar/conjugation-present.tex
+++ b/french/french-grammar/conjugation-present.tex
@@ -1,7 +1,7 @@
 
           %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
 
-\section{La conjugaison des verbes r\'eguliers \`a les temps simples}
+\section{La conjugaison des verbes r\'eguliers aux temps simples}
 \setcounter{theorem}{0}
 \setcounter{equation}{0}
 
@@ -96,7 +96,7 @@ ils/elles  &	\stemPresent-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFut
           %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
 
 \clearpage
-\section{La conjugaison \`a les temps compos\'es}
+\section{La conjugaison aux temps compos\'es}
 \setcounter{theorem}{0}
 \setcounter{equation}{0}
 
@@ -189,7 +189,7 @@ $+$ (e)(s)
           %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
 
 \clearpage
-\section{La conjugaison des verbes irr\'eguliers courant \`a les temps simples}
+\section{La conjugaison des verbes irr\'eguliers courant aux temps simples}
 \setcounter{theorem}{0}
 \setcounter{equation}{0}
 
