updated: conjugation-present.tex

--- a/french/french-grammar/conjugation-present.tex
+++ b/french/french-grammar/conjugation-present.tex
@@ -49,7 +49,7 @@ ils/elles  &	\stemPresent-issent	&	\stemPresent-iss-aient	&	\stemFutur-aient	&	\
 \end{center}
 \end{comment}
 
-\vskip 1.5cm
+\vskip 0.5cm
 \renewcommand{\stemPresent}{fin}
 \renewcommand{\stemFutur}{finir}
 \begin{center}
@@ -71,7 +71,7 @@ ils/elles  &	\stemPresent-iss-ent	&	\stemPresent-iss-aient	&	\stemFutur-aient	&	
 \end{tabular}
 \end{center}
 
-\vskip 1.5cm
+\vskip 0.5cm
 \renewcommand{\stemPresent}{r\'epond}
 \renewcommand{\stemFutur}{r\'epondr}
 \begin{center}
@@ -93,6 +93,16 @@ ils/elles  &	\stemPresent-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFut
 \end{tabular}
 \end{center}
 
+\vskip 0.3cm
+{\scriptsize
+\noindent
+\textbf{Tips:}
+\begin{itemize}
+\item	For each of Imparfait, Conditionnel, and Futur, the suffixes are the same across all three verb groups.
+\item	For Conditionnel and Futur, conjugation follows this formula: infinitive + suffix (except the final ``e" is dropped for -re verbs).
+\item	For {\color{red}I}mparfait and Cond{\color{red}i}tionnel, all suffixes contain an the letter {\color{red}i}. 
+\end{itemize}
+}
           %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
 
 \clearpage
