updated: conjugation-present.tex, French-Grammar-StudyNotes.tex

--- a/french/french-grammar/conjugation-present.tex
+++ b/french/french-grammar/conjugation-present.tex
@@ -93,14 +93,14 @@ ils/elles  &	\stemPresent-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFut
 \end{tabular}
 \end{center}
 
-\vskip 0.3cm
-{\scriptsize
+\vskip 0.5cm
+{\small
 \noindent
 \textbf{Tips:}
 \begin{itemize}
 \item	For each of Imparfait, Conditionnel, and Futur, the suffixes are the same across all three verb groups.
 \item	For Conditionnel and Futur, conjugation follows this formula: infinitive + suffix (except the final ``e" is dropped for -re verbs).
-\item	For {\color{red}I}mparfait and Cond{\color{red}i}tionnel, all suffixes contain an the letter {\color{red}i}. 
+\item	For {\color{red}I}mparfait and Cond{\color{red}i}tionnel, all suffixes contain the letter {\color{red}i}. 
 \end{itemize}
 }
           %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
@@ -119,12 +119,12 @@ ils/elles  &	\stemPresent-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFut
 \hline
 & \textit{have, am having} & \textit{used to have, was having} & \textit{would have} & \textit{will have} \\
 \hline\hline
-je            &	ai	&	avais	&	aurais	 &	aurai	\\
-tu            &	as 	&	avais	&	aurais	&	auras	\\
-il/elle/on  &	a	&	avait	&	aurait	&	aura	\\
-nous       &	avons	&	avions	&	aurions	&	aurons	\\
-vous       &	avez	&	aviez	&	auriez		&	aurez	\\
-ils/elles   &	ont 	&	avaient	&	auraient	&	auront	\\
+je            &	ai	&	av-ais	&	aur-ais	 &	aur-ai	\\
+tu            &	as 	&	av-ais	&	aur-ais	&	aur-as	\\
+il/elle/on  &	a	&	av-ait	&	aur-ait	&	aur-a	\\
+nous       &	avons	&	av-ions	&	aur-ions	&	aur-ons	\\
+vous       &	avez	&	av-iez	&	aur-iez		&	aur-ez	\\
+ils/elles   &	ont 	&	av-aient	&	aur-aient	&	aur-ont	\\
 \hline
 \end{tabular}
 \end{flushleft}
@@ -149,8 +149,8 @@ ils/elles   &	ont 	&	avaient	&	auraient	&	auront	\\
 \quad$+$\quad parl\'e
 \end{flushleft}
 
-\clearpage
-%\vskip 0.5cm
+%\clearpage
+\vskip 1.0cm
 \begin{flushleft}
 \textbf{\^Etre}
 \vskip 0.1cm
@@ -160,12 +160,12 @@ ils/elles   &	ont 	&	avaient	&	auraient	&	auront	\\
 \hline
 & \textit{am, am being} & \textit{used to be, was being} & \textit{would be} & \textit{will be} \\
 \hline\hline
-je            &	suis	&	\'etais	&	serais	 &	serai	\\
-tu            &	es 	&	\'etais	&	serais	&	seras	\\
-il/elle/on  &	est	&	\'etait	&	serait	&	sera	\\
-nous       &	sommes	&	\'etions	&	serions	&	serons	\\
-vous       &	\^etes	&	\'etiez	&	seriez		&	serez	\\
-ils/elles   &	sont 	&	\'etaient	&	seraient	&	seront	\\
+je            &	suis	&	\'et-ais	&	ser-ais	 &	ser-ai	\\
+tu            &	es 	&	\'et-ais	&	ser-ais	&	ser-as	\\
+il/elle/on  &	est	&	\'et-ait	&	ser-ait	&	ser-a	\\
+nous       &	sommes	&	\'et-ions	&	ser-ions	&	ser-ons	\\
+vous       &	\^etes	&	\'et-iez	&	ser-iez		&	ser-ez	\\
+ils/elles   &	sont 	&	\'et-aient	&	ser-aient	&	ser-ont	\\
 \hline
 \end{tabular}
 \end{flushleft}
@@ -202,6 +202,303 @@ $+$ (e)(s)
 \section{La conjugaison des verbes irr\'eguliers courant aux temps simples}
 \setcounter{theorem}{0}
 \setcounter{equation}{0}
+
+\renewcommand{\stemPresent}{fais}
+\renewcommand{\stemFutur}{fer}
+\begin{center}
+\textbf{faire}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	fais 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	fais	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	fait		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	{\color{red}faites}	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	font	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+\renewcommand{\stemPresent}{all}
+\renewcommand{\stemFutur}{ir}
+\begin{center}
+\textbf{aller}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	vais 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	vas	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	va		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	vont	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+\renewcommand{\stemPresent}{ven}
+\renewcommand{\stemFutur}{viendr}
+\begin{center}
+\textbf{venir}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	viens 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	viens		&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	vient		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	viennent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+\renewcommand{\stemPresent}{fall}
+\renewcommand{\stemFutur}{faudr}
+\begin{center}
+\textbf{falloir}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	-- 	&	--	&	--	 &	--	\\
+tu           &	--	&	--	&	--	&	--	\\
+il/elle/on &	faut		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	--	&	--	&	--	&	--	\\
+vous      &	--	&	--	&	--	&	--	\\
+ils/elles  &	--	&	--	&	--	&	--	\\
+\hline
+\end{tabular}
+\end{center}
+
+          %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
+
+\clearpage
+
+\renewcommand{\stemPresent}{pouv}
+\renewcommand{\stemFutur}{pourr}
+\begin{center}
+\textbf{pouvoir}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	{\color{red}peu}x 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	{\color{red}peu}x	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	{\color{red}peu}t		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	{\color{red}peuv}-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+\renewcommand{\stemPresent}{voul}
+\renewcommand{\stemFutur}{voudr}
+\begin{center}
+\textbf{vouloir}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	{\color{red}veu}x 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	{\color{red}veu}x	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	{\color{red}veu}t		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	{\color{red}veul}-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+\renewcommand{\stemPresent}{dev}
+\renewcommand{\stemFutur}{devr}
+\begin{center}
+\textbf{devoir}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	{\color{red}doi}s 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	{\color{red}doi}s	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	{\color{red}doi}t		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	{\color{red}doiv}-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+\renewcommand{\stemPresent}{voy}
+\renewcommand{\stemFutur}{verr}
+\begin{center}
+\textbf{voir}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	{\color{red}voi}s 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	{\color{red}voi}s	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	{\color{red}voi}t		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	{\color{red}voi}-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+\renewcommand{\stemPresent}{sav}
+\renewcommand{\stemFutur}{saur}
+\begin{center}
+\textbf{savoir}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	{\color{red}sai}s 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	{\color{red}sai}s	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	{\color{red}sai}t		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	{\color{red}sav}-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+          %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
+
+\clearpage
+
+\renewcommand{\stemPresent}{recev}
+\renewcommand{\stemFutur}{recevr}
+\begin{center}
+\textbf{recevoir}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	{\color{red}re\c{c}oi}s 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	{\color{red}re\c{c}oi}s		&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	{\color{red}re\c{c}oi}t		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	{\color{red}re\c{c}oiv}-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+\renewcommand{\stemPresent}{envoy}
+\renewcommand{\stemFutur}{enverr}
+\begin{center}
+\textbf{envoyer}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	envoie 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	envoies		&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	envoie		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	envoient		&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+\renewcommand{\stemPresent}{accueill}
+\renewcommand{\stemFutur}{accueiller}
+\begin{center}
+\textbf{accueillir}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	accueille 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	accueilles		&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	accueille		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	accueillent		&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+          %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
+
+\clearpage
+
+\renewcommand{\stemPresent}{pren}
+\renewcommand{\stemFutur}{prendr}
+\begin{center}
+\textbf{prendre}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	prends 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	prends	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	prend		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	prennent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+\renewcommand{\stemPresent}{appren}
+\renewcommand{\stemFutur}{apprendr}
+\begin{center}
+\textbf{apprendre}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	apprends 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	apprends	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	apprend		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	apprennent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+\renewcommand{\stemPresent}{mett}
+\renewcommand{\stemFutur}{mettr}
+\begin{center}
+\textbf{mettre}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	mets 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	mets	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	met		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	mettent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
 
 \renewcommand{\stemPresent}{cour}
 \renewcommand{\stemFutur}{courr}
