updated: conjugation-present.tex

--- a/french/french-grammar/conjugation-present.tex
+++ b/french/french-grammar/conjugation-present.tex
@@ -271,7 +271,7 @@ ils/elles  &	viennent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\
 \hline\hline
 je           &	-- 	&	--	&	--	 &	--	\\
 tu           &	--	&	--	&	--	&	--	\\
-il/elle/on &	faut		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+{\color{red}il} &	faut		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
 nous      &	--	&	--	&	--	&	--	\\
 vous      &	--	&	--	&	--	&	--	\\
 ils/elles  &	--	&	--	&	--	&	--	\\
