--- a/french/french-grammar/conjugation-present.tex
+++ b/french/french-grammar/conjugation-present.tex
@@ -100,7 +100,10 @@ ils/elles  &	\stemPresent-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFut
 \begin{itemize}
 \item	For each of Imparfait, Conditionnel, and Futur, the suffixes are the same across all three verb groups.
 \item	For Conditionnel and Futur, conjugation follows this formula: infinitive + suffix (except the final ``e" is dropped for -re verbs).
-\item	For {\color{red}I}mparfait and Cond{\color{red}i}tionnel, all suffixes contain the letter {\color{red}i}. 
+\item	For {\color{red}I}mparfait and Cond{\color{red}i}tionnel, they have the EXACTLY same suffixes
+		and all their suffixes contain the letter {\color{red}i}.
+		The stem for the Conditionnel is the Infinitive
+		while the stem for the Imparfait is the \textit{nous}-stem in the Indicative Present.
 \end{itemize}
 }
           %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
