added and updated things ...

--- a/french/french-grammar/Conjugation-StudyNotes.tex
+++ b/french/french-grammar/Conjugation-StudyNotes.tex
@@ -143,6 +143,9 @@
 \mbox{}\vskip 0.0cm
 \input{conjugation-present.tex}
 
+\clearpage
+\input{conjugation-subjonctif.tex}
+
           %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
 
 %\section{Estimation of Domain Totals}
