--- a/french/french-grammar/conjugation-subjonctif.tex
+++ b/french/french-grammar/conjugation-subjonctif.tex
@@ -1,26 +1,27 @@
 
           %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
 
-\section{La conjugaison des verbes r\'eguliers aux temps simples}
+\section{La conjugaison des verbes r\'eguliers aux temps subjonctifs}
 \setcounter{theorem}{0}
 \setcounter{equation}{0}
 
-\newcommand{\stemPresent}{parl}
-\newcommand{\stemFutur}{parler}
+\renewcommand{\stemPresent}{parl}
+\renewcommand{\stemFutur}{parler}
 \begin{center}
 \textbf{Des verbes en -er (parler)}
 \vskip 0.1cm
 \begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
 \hline
-& Pr\'esent & Imparfait & Conditionnel & Futur \\
+& Subjonctif & Subjonctif & Pass\'{e} & Plus-que-parfait \\
+& pr\'esent & imparfait & du subjonctif & du subjonctif \\
 \hline
 & \textit{do, am doing} & \textit{used to do, was doing} & \textit{would do} & \textit{will do} \\
 \hline\hline
 je            &	\stemPresent-e	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
 tu            &	\stemPresent-es	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
 il/elle/on  &	\stemPresent-e	&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
-nous       &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
-vous       &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+nous       &	\stemPresent-ions	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous       &	\stemPresent-iez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
 ils/elles   &	\stemPresent-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
 \hline
 \end{tabular}
@@ -244,6 +245,48 @@ ils/elles  &	vont	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
 \end{tabular}
 \end{center}
 
+\renewcommand{\stemPresent}{ven}
+\renewcommand{\stemFutur}{viendr}
+\begin{center}
+\textbf{venir}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	viens 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	viens		&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	vient		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	viennent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+\renewcommand{\stemPresent}{fall}
+\renewcommand{\stemFutur}{faudr}
+\begin{center}
+\textbf{falloir}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	-- 	&	--	&	--	 &	--	\\
+tu           &	--	&	--	&	--	&	--	\\
+{\color{red}il} &	faut		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	--	&	--	&	--	&	--	\\
+vous      &	--	&	--	&	--	&	--	\\
+ils/elles  &	--	&	--	&	--	&	--	\\
+\hline
+\end{tabular}
+\end{center}
+
+          %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
+
+\clearpage
+
 \renewcommand{\stemPresent}{pouv}
 \renewcommand{\stemFutur}{pourr}
 \begin{center}
@@ -281,167 +324,6 @@ ils/elles  &	{\color{red}veul}-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\st
 \hline
 \end{tabular}
 \end{center}
-
-\renewcommand{\stemPresent}{fall}
-\renewcommand{\stemFutur}{faudr}
-\begin{center}
-\textbf{falloir}
-\vskip 0.1cm
-\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
-\hline
-& Pr\'esent & Imparfait & Conditionnel & Futur \\
-\hline\hline
-je           &	-- 	&	--	&	--	 &	--	\\
-tu           &	--	&	--	&	--	&	--	\\
-{\color{red}il} &	faut		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
-nous      &	--	&	--	&	--	&	--	\\
-vous      &	--	&	--	&	--	&	--	\\
-ils/elles  &	--	&	--	&	--	&	--	\\
-\hline
-\end{tabular}
-\end{center}
-
-          %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
-
-\clearpage
-
-\renewcommand{\stemPresent}{ven}
-\renewcommand{\stemFutur}{viendr}
-\begin{center}
-\textbf{venir}
-\vskip 0.1cm
-\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
-\hline
-& Pr\'esent & Imparfait & Conditionnel & Futur \\
-\hline\hline
-je           &	viens 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
-tu           &	viens		&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
-il/elle/on &	vient		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
-nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
-vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
-ils/elles  &	viennent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
-\hline
-\end{tabular}
-\end{center}
-
-\renewcommand{\stemPresent}{ten}
-\renewcommand{\stemFutur}{tiendr}
-\begin{center}
-\textbf{tenir}
-\vskip 0.1cm
-\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
-\hline
-& Pr\'esent & Imparfait & Conditionnel & Futur \\
-\hline\hline
-je           &	tiens 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
-tu           &	tiens		&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
-il/elle/on &	tient		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
-nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
-vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
-ils/elles  &	tiennent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
-\hline
-\end{tabular}
-\end{center}
-
-\renewcommand{\stemPresent}{sent}
-\renewcommand{\stemFutur}{sentir}
-\begin{center}
-\textbf{sentir}
-\vskip 0.1cm
-\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
-\hline
-& Pr\'esent & Imparfait & Conditionnel & Futur \\
-\hline\hline
-je           &	sens 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
-tu           &	sens	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
-il/elle/on &	sent	&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
-nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
-vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
-ils/elles  &	sentent	 &	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
-\hline
-\end{tabular}
-\end{center}
-
-%\renewcommand{\stemPresent}{obten}
-%\renewcommand{\stemFutur}{obtiendr}
-%\begin{center}
-%\textbf{obtenir}
-%\vskip 0.1cm
-%\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
-%\hline
-%& Pr\'esent & Imparfait & Conditionnel & Futur \\
-%\hline\hline
-%je           &	obtiens 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
-%tu           &	obtiens		&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
-%il/elle/on &	obtient		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
-%nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
-%vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
-%ils/elles  &	obtiennent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
-%\hline
-%\end{tabular}
-%\end{center}
-
-%\renewcommand{\stemPresent}{apparten}
-%\renewcommand{\stemFutur}{apptiendr}
-%\begin{center}
-%\textbf{appartenir}
-%\vskip 0.1cm
-%\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
-%\hline
-%& Pr\'esent & Imparfait & Conditionnel & Futur \\
-%\hline\hline
-%je           &	viens 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
-%tu           &	viens		&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
-%il/elle/on &	vient		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
-%nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
-%vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
-%ils/elles  &	viennent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
-%\hline
-%\end{tabular}
-%\end{center}
-
-\vskip 2.0cm
-\renewcommand{\stemPresent}{cour}
-\renewcommand{\stemFutur}{courr}
-\begin{center}
-\textbf{courir}
-\vskip 0.1cm
-\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
-\hline
-& Pr\'esent & Imparfait & Conditionnel & Futur \\
-\hline\hline
-je           &	\stemPresent-s 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
-tu           &	\stemPresent-s	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
-il/elle/on &	\stemPresent-t	&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
-nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
-vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
-ils/elles  &	\stemPresent-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
-\hline
-\end{tabular}
-\end{center}
-
-\renewcommand{\stemPresent}{accueill}
-\renewcommand{\stemFutur}{accueiller}
-\begin{center}
-\textbf{accueillir}
-\vskip 0.1cm
-\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
-\hline
-& Pr\'esent & Imparfait & Conditionnel & Futur \\
-\hline\hline
-je           &	\stemPresent-e 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
-tu           &	\stemPresent-es		&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
-il/elle/on &	\stemPresent-e		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
-nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
-vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
-ils/elles  &	\stemPresent-ent		&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
-\hline
-\end{tabular}
-\end{center}
-
-          %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
-
-\clearpage
 
 \renewcommand{\stemPresent}{dev}
 \renewcommand{\stemFutur}{devr}
@@ -481,25 +363,6 @@ ils/elles  &	{\color{red}voi}-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\ste
 \end{tabular}
 \end{center}
 
-\renewcommand{\stemPresent}{recev}
-\renewcommand{\stemFutur}{recevr}
-\begin{center}
-\textbf{recevoir}
-\vskip 0.1cm
-\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
-\hline
-& Pr\'esent & Imparfait & Conditionnel & Futur \\
-\hline\hline
-je           &	{\color{red}re\c{c}oi}s 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
-tu           &	{\color{red}re\c{c}oi}s		&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
-il/elle/on &	{\color{red}re\c{c}oi}t		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
-nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
-vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
-ils/elles  &	{\color{red}re\c{c}oiv}-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
-\hline
-\end{tabular}
-\end{center}
-
 \renewcommand{\stemPresent}{sav}
 \renewcommand{\stemFutur}{saur}
 \begin{center}
@@ -519,6 +382,29 @@ ils/elles  &	{\color{red}sav}-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\ste
 \end{tabular}
 \end{center}
 
+          %%%%% ~~~~~~~~~~~~~~~~~~~~ %%%%%
+
+\clearpage
+
+\renewcommand{\stemPresent}{recev}
+\renewcommand{\stemFutur}{recevr}
+\begin{center}
+\textbf{recevoir}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	{\color{red}re\c{c}oi}s 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	{\color{red}re\c{c}oi}s		&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	{\color{red}re\c{c}oi}t		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	{\color{red}re\c{c}oiv}-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
 \renewcommand{\stemPresent}{envoy}
 \renewcommand{\stemFutur}{enverr}
 \begin{center}
@@ -534,6 +420,25 @@ il/elle/on &	envoie		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
 nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
 vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
 ils/elles  &	envoient		&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+\hline
+\end{tabular}
+\end{center}
+
+\renewcommand{\stemPresent}{accueill}
+\renewcommand{\stemFutur}{accueiller}
+\begin{center}
+\textbf{accueillir}
+\vskip 0.1cm
+\begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
+\hline
+& Pr\'esent & Imparfait & Conditionnel & Futur \\
+\hline\hline
+je           &	accueille 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	accueilles		&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	accueille		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
+vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
+ils/elles  &	accueillent		&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
 \hline
 \end{tabular}
 \end{center}
@@ -599,21 +504,28 @@ ils/elles  &	mettent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
 \end{tabular}
 \end{center}
 
-\renewcommand{\stemPresent}{connaiss}
-\renewcommand{\stemFutur}{connaitr}
+\renewcommand{\stemPresent}{cour}
+\renewcommand{\stemFutur}{courr}
 \begin{center}
-\textbf{connaitre}
+\textbf{courir}
 \vskip 0.1cm
 \begin{tabular}{|c||L{3cm}|L{3cm}|L{3cm}|L{3cm}|}
 \hline
 & Pr\'esent & Imparfait & Conditionnel & Futur \\
 \hline\hline
-je           &	connais 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
-tu           &	connais	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
-il/elle/on &	connait		&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
+je           &	\stemPresent-s 	&	\stemPresent-ais	&	\stemFutur-ais	 &	\stemFutur-ai	\\
+tu           &	\stemPresent-s	&	\stemPresent-ais	&	\stemFutur-ais	&	\stemFutur-as	\\
+il/elle/on &	\stemPresent-t	&	\stemPresent-ait	&	\stemFutur-ait	&	\stemFutur-a	\\
 nous      &	\stemPresent-ons	&	\stemPresent-ions	&	\stemFutur-ions	&	\stemFutur-ons	\\
 vous      &	\stemPresent-ez	&	\stemPresent-iez	&	\stemFutur-iez		&	\stemFutur-ez	\\
-ils/elles  &	connaissent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
+ils/elles  &	\stemPresent-ent	&	\stemPresent-aient	&	\stemFutur-aient	&	\stemFutur-ont	\\
 \hline
 \end{tabular}
 \end{center}
+
+
+
+
+
+
+
